# pancake

./: .gitattributes  .gitignore  Makefile  README.md  dev-requirements.txt  main.py  output.avi  pyproject.toml  requirements.txt  setup.py
.github/workflows/: documentation.yaml  flake_linter.yaml
CAM_grabber_tool/: imggrabber_py3.py
cam_data/: aio.py
cam_data/CAM_grabber_tool/: imggrabber.py  imggrabber_py3.py  readme.txt
configs/database/: extended_db.yaml
configs/tracker/: centroid.yaml  deep_sort.yaml
data/: fix.py  merge.sh  run.sh
docs/modules/: README.md  backends.md  detector.md  eval.md  result_processing.md  tracker.md
docs/pancake/: config.html  db.html  index.html  logger.html  main.html  run.html
opencv-tests/: clicker.py  destrech.py  main.py
pancake/: config.py  db.py  logger.py  main.py  pancake.cfg  pancake.yaml  run.py  stream.py
pancake/detector/: __init__.py  base_class.py  detector.py  detector_yolo.py  detector_yolo_custom.py  detector_yolo_simple.py
pancake/misc/: cropper.py  destrech.py  detect_wrapper.py
pancake/models/: __init__.py  base_class.py  common.py  yolo.py  (+2 more)
samples/: streams.txt
src/: config.py  destrech.py  inference.py  main.py  stream.py
tests/: results.txt  sample_results.py  test.cfg  test_backend_dei.py  test_config.py  test_cropper.py  test_detect_wrapper.py  test_imagedir_analysis.py  test_logger.py  test_main.py  test_run.py  test_tracker_centroid.py  test_tracker_mosse.py
train_results_yolov5s6/: events.out.tfevents.1620751098.8a24a69f2ceb.705.0  opt.yaml  results.txt
yolov5/: stuff.py
(+129 files in other folders)
